feat(cmake): refact cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(btc-processor-posix)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-function (add_common_deps TGT)
+function (add_executable_deps TGT)
     target_include_directories(
         ${TGT}
         PRIVATE
@@ -15,28 +15,25 @@ function (add_common_deps TGT)
     target_sources(
         ${TGT}
         PRIVATE
-        src/logging/formatters/CFormatter.cpp
-        src/utils/io_utils.cpp
-        src/utils/io_utils.cpp
-        src/fmt/format.cc
-        src/fmt/ostream.cc
-        src/fmt/printf.cc
         include/btc-config.h
-        include/logging/Formatter.h
-        include/logging/Handler.h
-        include/logging/Level.h
-        include/logging/Logger.h
-        include/logging/Record.h
-        include/logging/formatters/CFormatter.h
-        include/logging/handlers/DefaultHandler.h
-        include/logging/handlers/FileHandler.h
-        include/logging/handlers/StreamHandler.h
-        include/fmt/container.h
-        include/fmt/format.h
-        include/fmt/ostream.h
-        include/fmt/printf.h
-        include/fmt/string.h
-        include/fmt/time.h
+    )
+
+    target_link_libraries(${TGT} logging)
+    target_link_libraries(${TGT} utils)
+    target_link_libraries(${TGT} fmt)
+endfunction()
+
+function (add_library_deps TGT)
+    target_include_directories(
+        ${TGT}
+        PRIVATE
+        include
+    )
+
+    target_sources(
+        ${TGT}
+        PRIVATE
+        include/btc-config.h
     )
 endfunction()
 
@@ -45,9 +42,57 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
       add_link_options(-pthread)
 endif()
 
+add_library(
+    logging
+    src/logging/formatters/CFormatter.cpp
+)
+target_sources(
+    logging
+    PRIVATE
+    include/logging/Formatter.h
+    include/logging/Handler.h
+    include/logging/Level.h
+    include/logging/Logger.h
+    include/logging/Record.h
+    include/logging/formatters/CFormatter.h
+    include/logging/handlers/DefaultHandler.h
+    include/logging/handlers/FileHandler.h
+    include/logging/handlers/StreamHandler.h
+)
+add_library_deps(logging)
+
+add_library(
+    utils
+    src/utils/io_utils.cpp
+)
+target_sources(
+    utils
+    PRIVATE
+    include/utils/io_utils.h
+)
+add_library_deps(utils)
+
+add_library(
+    fmt
+    src/fmt/format.cc
+    src/fmt/ostream.cc
+    src/fmt/printf.cc
+)
+target_sources(
+    fmt
+    PRIVATE
+    include/fmt/container.h
+    include/fmt/format.h
+    include/fmt/ostream.h
+    include/fmt/printf.h
+    include/fmt/string.h
+    include/fmt/time.h
+)
+add_library_deps(fmt)
+
 add_executable(
     btc_combine_blocks
-    src/btc_blocks_combiner/btc_blocks_combiner.cpp
+    src/btc_blocks_combiner/main.cpp
     src/btc_blocks_combiner/logger.cpp
 )
 target_sources(
@@ -55,11 +100,11 @@ target_sources(
     PRIVATE
     include/btc_blocks_combiner/logger.h
 )
-add_common_deps(btc_combine_blocks)
+add_executable_deps(btc_combine_blocks)
 
 add_executable(
     btc_gen_address
-    "src/btc_gen_address/btc_gen_address.cpp"
+    src/btc_gen_address/main.cpp
     src/btc_gen_address/logger.cpp
 )
 target_sources(
@@ -67,4 +112,4 @@ target_sources(
     PRIVATE
     include/btc_gen_address/logger.h
 )
-add_common_deps(btc_gen_address)
+add_executable_deps(btc_gen_address)
