feat(balance): support existed balance file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,6 +234,19 @@ target_sources(
 add_executable_deps(btc_gen_address_balance)
 target_link_libraries(btc_gen_address_balance nlohmann_json::nlohmann_json)
 
+add_executable(
+    btc_merge_address_balance
+    src/btc_merge_address_balance/main.cpp
+    src/btc_merge_address_balance/logger.cpp
+)
+target_sources(
+    btc_merge_address_balance
+    PRIVATE
+    include/btc_merge_address_balance/logger.h
+)
+add_executable_deps(btc_merge_address_balance)
+target_link_libraries(btc_merge_address_balance nlohmann_json::nlohmann_json)
+
 install(TARGETS
     btc_combine_blocks
     btc_combine_address
@@ -245,4 +258,5 @@ install(TARGETS
     btc_collect_day_ins
     btc_export_union_find
     btc_gen_address_balance
+    btc_merge_address_balance
 )
