feat(address_statisics): complete address_statisics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,6 +393,19 @@ target_sources(
 )
 add_executable_deps(btc_match_exchange_address)
 
+add_executable(
+    btc_gen_address_statistics
+    src/btc_gen_address_statistics/main.cpp
+    src/btc_gen_address_statistics/logger.cpp
+)
+target_sources(
+    btc_gen_address_statistics
+    PRIVATE
+    include/btc_gen_address_statistics/logger.h
+)
+add_executable_deps(btc_gen_address_statistics)
+target_link_libraries(btc_gen_address_statistics nlohmann_json::nlohmann_json)
+
 install(TARGETS
     btc_combine_blocks
     btc_combine_address
@@ -416,4 +429,5 @@ install(TARGETS
     btc_find_missed_blocks
     btc_textify_union_find
     btc_match_exchange_address
+    btc_gen_address_statistics
 )
