feat(final_export_address): complete final export address

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -431,6 +431,19 @@ target_sources(
 add_executable_deps(btc_gen_block_statistics)
 target_link_libraries(btc_gen_block_statistics nlohmann_json::nlohmann_json)
 
+add_executable(
+    final_export_address
+    src/final_export_address/main.cpp
+    src/final_export_address/logger.cpp
+)
+target_sources(
+    final_export_address
+    PRIVATE
+    include/final_export_address/logger.h
+)
+add_executable_deps(final_export_address)
+target_link_libraries(final_export_address nlohmann_json::nlohmann_json)
+
 install(TARGETS
     btc_combine_blocks
     btc_combine_address
@@ -457,4 +470,5 @@ install(TARGETS
     btc_match_exchange_address
     btc_gen_address_statistics
     btc_gen_block_statistics
+    final_export_address
 )
