feat(export_entity): complete export entity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -444,6 +444,19 @@ target_sources(
 add_executable_deps(final_export_address)
 target_link_libraries(final_export_address nlohmann_json::nlohmann_json)
 
+add_executable(
+    final_export_entity
+    src/final_export_entity/main.cpp
+    src/final_export_entity/logger.cpp
+)
+target_sources(
+    final_export_entity
+    PRIVATE
+    include/final_export_entity/logger.h
+)
+add_executable_deps(final_export_entity)
+target_link_libraries(final_export_entity nlohmann_json::nlohmann_json)
+
 install(TARGETS
     btc_combine_blocks
     btc_combine_address
@@ -471,4 +484,5 @@ install(TARGETS
     btc_gen_address_statistics
     btc_gen_block_statistics
     final_export_address
+    final_export_entity
 )
