feat(export): finish final export address

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -457,6 +457,19 @@ target_sources(
 add_executable_deps(final_export_entity)
 target_link_libraries(final_export_entity nlohmann_json::nlohmann_json)
 
+add_executable(
+    final_export_address_statistics
+    src/final_export_address_statistics/main.cpp
+    src/final_export_address_statistics/logger.cpp
+)
+target_sources(
+    final_export_address_statistics
+    PRIVATE
+    include/final_export_address_statistics/logger.h
+)
+add_executable_deps(final_export_address_statistics)
+target_link_libraries(final_export_address_statistics nlohmann_json::nlohmann_json)
+
 install(TARGETS
     btc_combine_blocks
     btc_combine_address
@@ -485,4 +498,5 @@ install(TARGETS
     btc_gen_block_statistics
     final_export_address
     final_export_entity
+    final_export_address_statistics
 )
