feat(tx_counts): complete export tx counts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -496,6 +496,19 @@ target_sources(
 add_executable_deps(final_export_entity_distribution)
 target_link_libraries(final_export_entity_distribution nlohmann_json::nlohmann_json)
 
+add_executable(
+    final_export_tx_counts
+    src/final_export_tx_counts/main.cpp
+    src/final_export_tx_counts/logger.cpp
+)
+target_sources(
+    final_export_tx_counts
+    PRIVATE
+    include/final_export_tx_counts/logger.h
+)
+add_executable_deps(final_export_tx_counts)
+target_link_libraries(final_export_tx_counts nlohmann_json::nlohmann_json)
+
 install(TARGETS
     btc_combine_blocks
     btc_combine_address
@@ -527,4 +540,5 @@ install(TARGETS
     final_export_address_statistics
     final_export_entity_balance
     final_export_entity_distribution
+    final_export_tx_counts
 )
