fix(export_tx_count): fix dump tx count

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -509,6 +509,19 @@ target_sources(
 add_executable_deps(final_export_tx_counts)
 target_link_libraries(final_export_tx_counts nlohmann_json::nlohmann_json)
 
+add_executable(
+    final_export_entity_txs
+    src/final_export_entity_txs/main.cpp
+    src/final_export_entity_txs/logger.cpp
+)
+target_sources(
+    final_export_entity_txs
+    PRIVATE
+    include/final_export_entity_txs/logger.h
+)
+add_executable_deps(final_export_entity_txs)
+target_link_libraries(final_export_entity_txs nlohmann_json::nlohmann_json)
+
 install(TARGETS
     btc_combine_blocks
     btc_combine_address
@@ -541,4 +554,5 @@ install(TARGETS
     final_export_entity_balance
     final_export_entity_distribution
     final_export_tx_counts
+    final_export_entity_txs
 )
